--- a/wwwroot/css/ListStyle.css
+++ b/wwwroot/css/ListStyle.css
@@ -1,28 +1,22 @@
-﻿select {
+﻿table {
     font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
-    font-size: 14px;
-    background: white;
-    max-width: 50%;
-    width: 50%;
-    border-collapse: collapse;
-    text-align: left;
-}
-
-option {
-    border-bottom: 1px solid #ccc;
-    color: #669;
-    padding: 9px 8px;
-    transition: .3s linear;
-}
-
-.button {
-    font-size: 14px;
-    width: 150px;
-}
-.InputText {
-    border: 3px double #848484;
-    outline: 0;
     font-size: 16px;
-    height: 25px;
-    width: 275px;
+    text-align: left;
+    border-collapse: collapse;
+    border-radius: 20px;
+    box-shadow: 0 0 0 10px #F2906B;
+    color: #452F21;
+    background-color:darkgrey;
 }
+
+th {
+    padding: 10px 8px;
+    background: white;
+}
+
+td {
+    border-top: 10px solid #F2906B;
+    padding: 8px;
+    background: white;
+}
+
