--- a/Views/Person/Index.cshtml
+++ b/Views/Person/Index.cshtml
@@ -25,11 +25,28 @@
                 <input type="text" name="yearOfBirth">
             </div>
         </div>
-        <input  class="btn btn-success" type="submit" value="Create" />
+        <input class="btn btn-success" type="submit" value="Create" />
     </form>
 </div>
 <div style="width:50%; margin-left:30%;">
-    <h1>Person List</h1>
+    <div class="container">
+        <h1>Person List</h1>
+        <form asp-controller="Person" asp-action="Search" method="post">
+            <div float:left;>
+                <label>Name</label>
+                <input type="text" name="name">
+            </div>
+            <div float:left;>
+                <label>Surname</label>
+                <input type="text" name="surname">
+            </div>
+            <div float:left;>
+                <label>Phone</label>
+                <input type="text" name="phoneNamber">
+            </div>
+            <input class="btn btn-primary" type="submit"  value="Search" />
+        </form>
+    </div>
     <form asp-controller="Person" asp-action="Delete" method="post">
         <table class="table">
             <tr>
@@ -39,7 +56,7 @@
                 <th>Year of birth</th>
                 <th></th>
             </tr>
-            @foreach (var person in Model.AllPersons)
+            @foreach (var person in Model)
             {
                 <tr>
                     <td>@person.Surname</td>
