--- a/wwwroot/css/ListStyle.css
+++ b/wwwroot/css/ListStyle.css
@@ -1,22 +1,1 @@
-﻿table {
-    font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
-    font-size: 16px;
-    text-align: left;
-    border-collapse: collapse;
-    border-radius: 20px;
-    box-shadow: 0 0 0 10px #F2906B;
-    color: #452F21;
-    background-color:darkgrey;
-}
-
-th {
-    padding: 10px 8px;
-    background: white;
-}
-
-td {
-    border-top: 10px solid #F2906B;
-    padding: 8px;
-    background: white;
-}
-
+﻿
